--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,17 @@
+.carousel {
+  width:100%;
+  height:500px;
+  margin: auto;
+}
+.nam {
+  justify-content: center;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 1.2rem;
+  position: flex;
+}
+
+
+
 .App {
   text-align: center;
 }
